--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,30 @@
         "codeception/base": "^2.4.0",
         "phpunit/phpunit": "~6.5.5",
         "codeception/verify": "~1.0.0",
-        "dmstr/yii2-adminlte-asset": "^2.4"
+        "dmstr/yii2-adminlte-asset": "^2.4",
+        "webmozart/assert": "^1.2",
+        "la-haute-societe/yii2-save-relations-behavior": "^1.2",
+        "yiisoft/yii2-authclient": "^2.1",
+        "kartik-v/yii2-widgets": "*",
+        "kartik-v/yii2-field-range": "*",
+        "paulzi/yii2-nested-sets": "^1.0",
+        "yii-dream-team/yii2-upload-behavior": "^1.1",
+        "bower-asset/font-awesome": "^4.7",
+        "bower-asset/owl.carousel": "^2.2",
+        "bower-asset/magnific-popup": "^1.1",
+        "elasticsearch/elasticsearch": "^5.2",
+        "yii-cms/yii2-robokassa": "^1.1",
+        "phpoffice/phpexcel": "^1.8",
+        "mihaildev/yii2-ckeditor": "^1.0",
+        "mihaildev/yii2-elfinder": "^1.2",
+        "fishvision/yii2-migrate": "^1.0",
+        "guzzlehttp/guzzle": "^6.2",
+        "filsh/yii2-oauth2-server": "^2.0",
+        "flow/jsonpath": "^0.3.4",
+        "drewm/mailchimp-api": "^2.4",
+        "yiisoft/yii2-redis": "^2.0",
+        "yiisoft/yii2-queue": "^2.0",
+        "league/flysystem": "^1.0"
     },
     "config": {
         "process-timeout": 1800,
